# old-dragon

./: .gitignore  README.md  pyproject.toml
docs/: roles.md
src/dragon/: __init__.py  cli.py  generator.py  web.py
src/dragon/character/: __init__.py  classes.py  generator.py  races.py
src/dragon/character/classes/: IClasses.py  __init__.py  barbarian.py  figher.py  scholar.py  wizard.py
src/dragon/character/data/: arcade_school.py  combat_style.py  live_dice.py
src/dragon/character/races/: __init__.py  dwarf.py  elf.py  half_elf.py  halfling.py  human.py
src/dragon/controllers/: character_controller.py
src/dragon/core/: attributes.py  character.py  classes.py
src/dragon/core/style/: IStyle.py  adventory.py  classic.py  heroic.py
src/dragon/models/: __init__.py  dice.py  generator.py  personagem.py  races.py
src/dragon/models/classes/: IClasses.py  __init__.py  barbarian.py  figher.py  scholar.py  wizard.py
src/dragon/models/races/: base.py  elf.py  gnome.py  human.py
src/dragon/models/style/: IStyle.py  adventory.py  classic.py  heroic.py
src/dragon/services/: character_service.py
src/dragon/templates/: create.html  home.html
test_env/: pyvenv.cfg
tests/: test_classes.py  test_personagem.py  test_races.py
