[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dragon"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "U.N. Owen", email = "void@some.where" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['typer']

[project.scripts]
dragon = "dragon.cli:app"

[tool.hatch.version]
path = "src/dragon/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dragon tests}"

[tool.coverage.run]
source_pkgs = ["dragon", "tests"]
branch = true
parallel = true
omit = ["src/dragon/__about__.py"]

[tool.coverage.paths]
dragon = ["src/dragon", "*/dragon/src/dragon"]
tests = ["tests", "*/dragon/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
