[tool.poetry]
name = "dragon"
version = "0.1.0"
description = ""
authors = ["U.N. Owen <void@some.where>"]
license = "MIT"
readme = "README.md"
keywords = []
packages = [{ include = "dragon", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.8"
typer = "*"
InquirerPy = "*"

[tool.poetry.scripts]
dragon = "dragon.cli:app"

[tool.poetry.dev-dependencies]
mypy = ">=1.0.0"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source_pkgs = ["dragon", "tests"]
branch = true
parallel = true
omit = ["src/dragon/__about__.py"]

[tool.coverage.paths]
dragon = ["src/dragon", "*/dragon/src/dragon"]
tests = ["tests", "*/dragon/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]